# winAutoShutdown

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: README_zh-CN.md
docs/dev/: IMPLEMENTATION_PLAN.md  design.md  roadmap.md
legacy/: .clang-format  AGENTS.md  README_CPP.md
legacy/src/: CMakeLists.txt  main.cpp
legacy/src/components/operations/: operation_base.h  power_action.cpp
legacy/src/components/work/: work.h
legacy/src/res/: About.md
legacy/src/ui/: mainWindow.cpp  menuTrayIcon.cpp  menuTrayIcon.h  optionWidget.ui
legacy/translations/: zh_CN.ts
src/: App.vue  CMakeLists.txt  img.qrc  main.cpp  main.ts  shutdown.cpp  shutdown.h  shutdown.ui
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: mod.rs  system_control.rs  system_control_spec.rs  timer.rs  timer_spec.rs
src-tauri/src/domain/: mod.rs  task.rs  task_spec.rs
src/components/: AboutModal.vue  CMakeLists.txt  TaskForm.vue  TaskList.vue  operationBase.cpp  operationBase.h  operationLogOff.cpp  operationLogOff.h  operationReboot.cpp  operationReboot.h  operationShutdown.cpp  operationShutdown.h  workBase.cpp  workBase.h  workOneShot.cpp  workOneShot.h  worker.cpp  worker.h
src/components/__tests__/: App.spec.ts  TaskForm.spec.ts  TaskList.spec.ts
src/components/operations/: CMakeLists.txt  power_action.h
src/components/work/: CMakeLists.txt  work.cpp  worker.cpp  worker.h
src/composables/: useTheme.ts
src/i18n/: index.ts  test-utils.ts
src/i18n/locales/: en.json  zh-CN.json
src/res/: About.md  CMakeLists.txt  logo.rc  res.qrc
src/router/: index.ts
src/stores/: settings.ts  taskStore.ts
src/stores/__tests__/: taskStore.spec.ts
src/types/: index.ts
src/ui/: CMakeLists.txt  aboutDialog.cpp  aboutDialog.h  aboutDialog.ui  mainWindow.cpp  mainWindow.h  mainWindow.ui  menuTrayIcon.cpp  menuTrayIcon.h  optionWidget.cpp  optionWidget.h
src/views/: HomeView.vue  SettingsView.vue
translations/: CMakeLists.txt  en_US.ts
