[package]
name = "win_auto_shutdown"
version = "1.3.0"
description = "A lightweight, secure Windows power management automation tool."
authors = ["CodingRookie98"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "win_auto_shutdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Shutdown", "Win32_System_Power", "Win32_System_Threading"] }

[dev-dependencies]
mockall = "0.13"
